<resources>
    <string name="app_name">GameCentre</string>
    <string name="score_text">Score: \u0020</string>
    <string name="score">Score</string>
    <string name="score_zero">0</string>
    <string name="three_text">3</string>
    <string name="welcome_text_slidingtiles">Welcome To Sliding Tiles! \n A Puzzle Game where you
        must arrange the numbers in the correct order.</string>
    <string name="start_text">New Game</string>
    <string name="load_text">Load Saved Game</string>
    <string name="save_text">Save Game</string>
    <string name="user_text">User</string>
    <string name="my_score_text">My Scoreboard</string>
    <string name="games_text">Games</string>
    <string name="start_game_text">Start Game</string>
    <string name="scoreboard_text">Scoreboard</string>
    <string name="easy_text">Easy</string>
    <string name="medium_text">Medium</string>
    <string name="hard_text">Hard</string>
    <string name="undo_text">Undo</string>
    <string name="redo_text">Redo</string>
    <string name="welcome_user">Log In To Your Account</string>
    <string name="create_user">Create a New Account</string>
    <string name="create_user_button">Create Account</string>
    <string name="current_undo_text">Current allowed undo: \u0020</string>
    <string name="scoreboard_note_text">(Only display the best score for each user.)</string>
    <string name="user_scoreboard_note">(Only display the best score for each game.)</string>
    <string name="complex_text">Please choose the complexity of the game.</string>
    <string name="maximum_undo">Set maximum undo</string>
    <string name="set_text">Set</string>
    <string name="confirm_text">Confirm</string>
    <string name="undo_note">The default allowed undo is 3 (if nothing is inputted).</string>
    <string name="undo_score_note">Only store the score for 3 allowed undo.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="slidingtiles_text">Sliding Tiles</string>
    <string name="colourguess_text">Colour Guess</string>
    <string name="twenty_text">2048</string>
    <string name="choose_game">Please choose the game.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="show_scoreboard">Show the Scoreboard for:</string>
    <string name="time_left_text">Time left: \u0020</string>
    <string name="timer">00:00</string>
    <string name="welcome_text_colourguess">Welcome To Colour Guess! \n A Memory Game where you
        must memorize all the colours and locate the indicated colours in correct position.</string>
    <string name="welcome_text_twenty">Welcome To 2048! \n A Game where you must slide numbered
        tiles on a grid to combine them to create a tile with the number 2048.</string>
</resources>
