<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group_0548.gamecentre.slidingtiles.SlidingChooseComplexityActivity">

    <TextView
        android:id="@+id/SlidingComplexText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="280dp"
        android:text="@string/complex_text"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/SlidingEasyButton"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:text="@string/easy_text" />

    <Button
        android:id="@+id/SlidingMediumButton"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:text="@string/medium_text" />

    <Button
        android:id="@+id/SlidingHardButton"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:text="@string/hard_text" />

    <EditText
        android:id="@+id/SlidingCustomUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/maximum_undo"
        android:inputType="number"
        android:digits="1234567890" />

    <Button
        android:id="@+id/SlidingSetUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:text="@string/set_text" />

    <TextView
        android:id="@+id/SlidingDefaultInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:textColor="@android:color/black"
        android:text="@string/undo_note" />

    <TextView
        android:id="@+id/SlidingScoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/SlidingDefaultInfo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp"
        android:textColor="@android:color/black"
        android:text="@string/undo_score_note" />

    <TextView
        android:id="@+id/SlidingTextUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/SlidingDefaultInfo"
        android:layout_marginTop="60dp"
        android:text="@string/current_undo_text"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/SlidingCurrUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_text"
        android:textColor="@android:color/black"
        android:layout_toEndOf="@id/SlidingTextUndo"
        android:layout_alignBaseline="@id/SlidingTextUndo"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>