<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".twentygame.TwentyChooseComplexityActivity">

    <TextView
        android:id="@+id/TwentyTextUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/TwentyDefaultInfo"
        android:layout_marginTop="90dp"
        android:text="@string/current_undo_text"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TwentyCurrUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_text"
        android:textColor="@android:color/black"
        android:layout_toEndOf="@id/TwentyTextUndo"
        android:layout_alignBaseline="@id/TwentyTextUndo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TwentyDefaultInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp"
        android:textColor="@android:color/black"
        android:text="@string/undo_note" />

    <TextView
        android:id="@+id/TwentyScoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/TwentyDefaultInfo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:textColor="@android:color/black"
        android:text="@string/undo_score_note" />

    <EditText
        android:id="@+id/TwentyCustomUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/maximum_undo"
        android:inputType="number"
        android:digits="1234567890" />

    <Button
        android:id="@+id/TwentySetUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:text="@string/set_text" />

    <Button
        android:id="@+id/TwentySetUndoStart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="400dp"
        android:text="@string/start_game_text" />

</RelativeLayout>