<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group_0548.gamecentre.GameCentreActivity">

    <Button
        android:id="@+id/SlidingTilesGame"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/slidingtiles_text" />

    <Button
        android:id="@+id/ColourGuessGame"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:text="@string/colourguess_text" />

    <Button
        android:id="@+id/TwentyGame"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:text="@string/twenty_text" />

    <TextView
        android:id="@+id/GameCentreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/choose_game"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/UserGameScoreButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="550dp"
        android:text="@string/my_score_text" />


</RelativeLayout>