<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group_0548.gamecentre.slidingtiles.StartingActivity">

    <TextView
        android:id="@+id/GameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="230dp"
        android:gravity="center"
        android:text="@string/welcome_text_slidingtiles"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_below="@+id/GameText"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start_text" />

    <Button
        android:id="@+id/LoadButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_below="@+id/GameText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/StartButton"
        android:text="@string/load_text" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_below="@+id/GameText"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/StartButton"
        android:text="@string/save_text" />

    <Button
        android:id="@+id/ScoreButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_below="@+id/GameText"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp"
        android:text="@string/scoreboard_text" />

</RelativeLayout>