<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group_0548.gamecentre.LoginActivity">

    <Button
        android:id="@+id/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Password"
        android:layout_alignParentTop="true"
        android:layout_marginTop="380dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/Password"
        android:layout_alignParentTop="true"
        android:layout_marginTop="380dp"
        android:text="@string/sign_up" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/Password"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:imeOptions="actionNext"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/WelcomeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:text="@string/welcome_user" />


</RelativeLayout>