<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".twentygame.TwentyStartingActivity">

    <TextView
        android:id="@+id/TwentyGameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/welcome_text_twenty"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/TwentyStartButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start_text" />

    <Button
        android:id="@+id/TwentyLoadButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_alignBottom="@+id/TwentyStartButton"
        android:text="@string/load_text" />

    <Button
        android:id="@+id/TwentyScoreButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_alignBottom="@+id/TwentyStartButton"
        android:text="@string/scoreboard_text" />
</RelativeLayout>