<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group_0548.gamecentre.colourguess.ColourGuessChooseComplexityActivity">

    <TextView
        android:id="@+id/ColourComplexText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="380dp"
        android:text="@string/complex_text"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/ColourEasyButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="300dp"
        android:text="@string/easy_text" />

    <Button
        android:id="@+id/ColourMediumButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="300dp"
        android:text="@string/medium_text" />

    <Button
        android:id="@+id/ColourHardButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="300dp"
        android:text="@string/hard_text" />


</RelativeLayout>