<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UserExists"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group_0548.gamecentre.SignUpActivity">

    <EditText
        android:id="@+id/TypeUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:layout_alignStart="@id/TypePassword"
        android:ems="10"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/TypePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/CreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="380dp"
        android:text="@string/create_user_button" />

    <TextView
        android:id="@+id/CreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:text="@string/create_user" />

</RelativeLayout>