<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group_0548.gamecentre.colourguess.ColourGuessStartingActivity">

    <TextView
        android:id="@+id/ColourGameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/welcome_text_colourguess"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/ColourNewButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start_text" />

    <Button
        android:id="@+id/ColourScoreButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="220dp"
        android:text="@string/scoreboard_text" />

</RelativeLayout>