<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="group_0548.gamecentre.slidingtiles.GameActivity">

    <TextView
        android:id="@+id/SlidingScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:text="@string/score_text"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/SlidingScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/ScoreText"
        android:layout_toEndOf="@+id/SlidingScoreText"
        android:text="@string/score_zero"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <group_0548.gamecentre.slidingtiles.GestureDetectGridView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/SlidingUndoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/SlidingRedoButton"
        android:onClick="undo"
        android:text="@string/undo_text" />

    <Button
        android:id="@+id/SlidingRedoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="230dp"
        android:onClick="redo"
        android:text="@string/redo_text" />


</RelativeLayout>