<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="group_0548.gamecentre.UserScoreBoardActivity">

    <TextView
        android:id="@+id/UserGameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/games_text"
        android:textColor="@android:color/black"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/UserScoreGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/UserGameText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/UserScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_alignBaseline="@id/UserGameText"
        android:text="@string/score"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/UserScoreScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/UserScoreText"
        android:layout_alignBaseline="@id/UserScoreGames"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ScoreNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/user_scoreboard_note"
        android:textColor="@android:color/black" />

</RelativeLayout>